test/libsolidity/syntaxTests/freeFunctions/free_function_visibility.sol
function fun() public {
}
// ----
// SyntaxError 4126: (0-25): Free functions cannot have visibility.
